# ENLIGHT

./: LICENSE  README.md  environment.md  environment.yml  pyproject.toml
datasets/: clip_dataset.py  clip_label_defs.py  lmm_dataset.py  slide_dataset.py  wsi_feat_dataset.py
eval-generation/: format_vqa_batch.py  infer_batch_vqa.py  infer_slide.py  report_generate_slide.sh  vqa_pathmmu.sh  vqa_slide.sh
eval-xclassify/: explain_classify.py  explain_molecular.sh  explain_subtype.sh
eval-xclassify/config/: GBM-LGG.yml  GBM_DEL_SMARCA4.yml
eval-zeroshot/: dataset.md  zeroshot_classification.py  zeroshot_retrieval.py
models/: __init__.py  builder.py  llava_arch.py
models/language_model/: llava_llama.py  llava_mistral.py
models/multimodal_encoder/: builder.py  clip_encoder.py  openclip_encoder.py
models/multimodal_projector/: builder.py
models/visual_encoder/: __init__.py  abmil.py  backbone.py  naive.py  network.py
preprocess/: slide_tile.py  slide_tile.sh  slide_tile_utils.py  slide_visualenc.py  slide_visualenc.sh
utils/: constants.py  conversation.py  io.py  metrics.py  mm_utils.py  utils.py
