[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enlight"
version = "1.0.0"
description = "ENLIGHT: Explainable Neoplasm Learning in Grounded Histology Terms"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.1.2", "torchvision==0.16.2",
    "transformers>=4.45.0,<5.0", "tokenizers>=0.19,<0.21", "huggingface_hub>=0.23.2,<1.0",
    "sentencepiece==0.1.99", "shortuuid", "gdown",
    "accelerate>=1.1.0", "peft==0.13.2", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==6.7.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "datasets", "h5py", "opencv-python", "pandas",
    "openslide-python", "torchscale", "torchmetrics",
]

[project.optional-dependencies]
train = ["deepspeed==0.12.6", "ninja", "wandb"]
build = ["build", "twine", "bert-score", "rouge-score", "evaluate"]

[project.urls]
"Homepage" = "https://github.com/hms-dbmi/ENLIGHT/"
"Bug Tracker" = "https://github.com/hms-dbmi/ENLIGHT/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]